fix lint errors: standardize SVG gradient element casing in index.html
Update all SVG linearGradient element tags to use consistent lowercase format throughout the page. This affects the navigation logo, charts, and icon gradients to ensure uniform XML syntax across the document.

--- a/index.html
+++ b/index.html
@@ -68,12 +68,12 @@
             <div class="nav-brand">
                 <div class="brand-logo">
                     <svg viewBox="0 0 64 64" class="logo-svg">
-                        <defs>
-                            <linearGradient id="navLogoGradient" x1="0%" y1="0%" x2="100%" y2="100%">
-                                <stop offset="0%" style="stop-color:#ea580c"/>
-                                <stop offset="50%" style="stop-color:#dc2626"/>
-                                <stop offset="100%" style="stop-color:#b91c1c"/>
-                            </linearGradient>
+            <defs>
+                <lineargradient id="navLogoGradient" x1="0%" y1="0%" x2="100%" y2="100%">
+                    <stop offset="0%" style="stop-color:#ea580c"/>
+                    <stop offset="50%" style="stop-color:#dc2626"/>
+                    <stop offset="100%" style="stop-color:#b91c1c"/>
+                </lineargradient>
                         </defs>
                         <circle cx="32" cy="32" r="30" fill="url(#navLogoGradient)"/>
                         <path d="M16 20 L16 44 L20 44 L20 28 L26 44 L30 44 L30 20 L26 20 L26 36 L20 20 Z" fill="white"/>
@@ -162,16 +162,16 @@
                         </div>
                         <svg class="growth-chart" viewBox="0 0 400 200">
                             <defs>
-                                <linearGradient id="chartGradient" x1="0%" y1="0%" x2="0%" y2="100%">
+                                <lineargradient id="chartGradient" x1="0%" y1="0%" x2="0%" y2="100%">
                                     <stop offset="0%" style="stop-color:#2563eb;stop-opacity:0.4"/>
                                     <stop offset="50%" style="stop-color:#8b5cf6;stop-opacity:0.2"/>
                                     <stop offset="100%" style="stop-color:#06b6d4;stop-opacity:0"/>
-                                </linearGradient>
-                                <linearGradient id="lineGradient" x1="0%" y1="0%" x2="100%" y2="0%">
+                                </lineargradient>
+                                <lineargradient id="lineGradient" x1="0%" y1="0%" x2="100%" y2="0%">
                                     <stop offset="0%" style="stop-color:#2563eb"/>
                                     <stop offset="50%" style="stop-color:#8b5cf6"/>
                                     <stop offset="100%" style="stop-color:#06b6d4"/>
-                                </linearGradient>
+                                </lineargradient>
                             </defs>
                             <!-- Grid lines -->
                             <g class="grid-lines" opacity="0.1">
@@ -369,30 +369,30 @@
             <!-- SVG Gradients for Icons -->
             <svg style="display: none;">
                 <defs>
-                    <linearGradient id="iconGradient1" x1="0%" y1="0%" x2="100%" y2="100%">
-                        <stop offset="0%" style="stop-color:#3b82f6"/>
-                        <stop offset="100%" style="stop-color:#1d4ed8"/>
-                    </linearGradient>
-                    <linearGradient id="iconGradient2" x1="0%" y1="0%" x2="100%" y2="100%">
-                        <stop offset="0%" style="stop-color:#10b981"/>
-                        <stop offset="100%" style="stop-color:#059669"/>
-                    </linearGradient>
-                    <linearGradient id="iconGradient3" x1="0%" y1="0%" x2="100%" y2="100%">
-                        <stop offset="0%" style="stop-color:#8b5cf6"/>
-                        <stop offset="100%" style="stop-color:#7c3aed"/>
-                    </linearGradient>
-                    <linearGradient id="iconGradient4" x1="0%" y1="0%" x2="100%" y2="100%">
-                        <stop offset="0%" style="stop-color:#f59e0b"/>
-                        <stop offset="100%" style="stop-color:#d97706"/>
-                    </linearGradient>
-                    <linearGradient id="iconGradient5" x1="0%" y1="0%" x2="100%" y2="100%">
-                        <stop offset="0%" style="stop-color:#ef4444"/>
-                        <stop offset="100%" style="stop-color:#dc2626"/>
-                    </linearGradient>
-                    <linearGradient id="iconGradient6" x1="0%" y1="0%" x2="100%" y2="100%">
-                        <stop offset="0%" style="stop-color:#06b6d4"/>
-                        <stop offset="100%" style="stop-color:#0891b2"/>
-                    </linearGradient>
+                                <lineargradient id="iconGradient1" x1="0%" y1="0%" x2="100%" y2="100%">
+                                    <stop offset="0%" style="stop-color:#3b82f6"/>
+                                    <stop offset="100%" style="stop-color:#1d4ed8"/>
+                                </lineargradient>
+                                <lineargradient id="iconGradient2" x1="0%" y1="0%" x2="100%" y2="100%">
+                                    <stop offset="0%" style="stop-color:#10b981"/>
+                                    <stop offset="100%" style="stop-color:#059669"/>
+                                </lineargradient>
+                                <lineargradient id="iconGradient3" x1="0%" y1="0%" x2="100%" y2="100%">
+                                    <stop offset="0%" style="stop-color:#8b5cf6"/>
+                                    <stop offset="100%" style="stop-color:#7c3aed"/>
+                                </lineargradient>
+                                <lineargradient id="iconGradient4" x1="0%" y1="0%" x2="100%" y2="100%">
+                                    <stop offset="0%" style="stop-color:#f59e0b"/>
+                                    <stop offset="100%" style="stop-color:#d97706"/>
+                                </lineargradient>
+                                <lineargradient id="iconGradient5" x1="0%" y1="0%" x2="100%" y2="100%">
+                                    <stop offset="0%" style="stop-color:#ef4444"/>
+                                    <stop offset="100%" style="stop-color:#dc2626"/>
+                                </lineargradient>
+                                <lineargradient id="iconGradient6" x1="0%" y1="0%" x2="100%" y2="100%">
+                                    <stop offset="0%" style="stop-color:#06b6d4"/>
+                                    <stop offset="100%" style="stop-color:#0891b2"/>
+                                </lineargradient>
                 </defs>
             </svg>
         </div>
