style: fix code formatting and HTML element casing
Fix comment formatting in 3d-models.js that was incorrectly broken across lines.
Convert SVG gradient element tags to lowercase (linearGradient → lineargradient)
to comply with HTML5 standards. Add proper newlines at end of files.

--- a/index.html
+++ b/index.html
@@ -173,16 +173,16 @@
                         </div>
                         <svg class="growth-chart" viewBox="0 0 400 200">
                             <defs>
-                                <linearGradient id="chartGradient" x1="0%" y1="0%" x2="0%" y2="100%">
+                                <lineargradient id="chartGradient" x1="0%" y1="0%" x2="0%" y2="100%">
                                     <stop offset="0%" style="stop-color:#2563eb;stop-opacity:0.4" />
                                     <stop offset="50%" style="stop-color:#8b5cf6;stop-opacity:0.2" />
                                     <stop offset="100%" style="stop-color:#06b6d4;stop-opacity:0" />
-                                </linearGradient>
-                                <linearGradient id="lineGradient" x1="0%" y1="0%" x2="100%" y2="0%">
+                                </lineargradient>
+                                <lineargradient id="lineGradient" x1="0%" y1="0%" x2="100%" y2="0%">
                                     <stop offset="0%" style="stop-color:#2563eb" />
                                     <stop offset="50%" style="stop-color:#8b5cf6" />
                                     <stop offset="100%" style="stop-color:#06b6d4" />
-                                </linearGradient>
+                                </lineargradient>
                             </defs>
                             <!-- Grid lines -->
                             <g class="grid-lines" opacity="0.1">
