--- a/index.html
+++ b/index.html
@@ -160,6 +160,22 @@
                 </div>
             </div>
             <div class="hero-visual">
+                <!-- Professional Hero Image -->
+                <div class="hero-image-container">
+                    <img src="https://images.unsplash.com/photo-1560250097-0b93528c311a?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1000&q=80" 
+                         alt="Professional financial advisor Conor Nolan in modern office setting" 
+                         class="hero-image"
+                         loading="eager"
+                         width="500" 
+                         height="600">
+                    <div class="image-overlay">
+                        <div class="credentials-badge">
+                            <span class="credential-text">CFP®</span>
+                            <span class="credential-subtitle">Certified Financial Planner</span>
+                        </div>
+                    </div>
+                </div>
+                
                 <div class="financial-dashboard">
                     <!-- Main Chart Container -->
                     <div class="stock-chart-container">
@@ -274,11 +290,21 @@
                 <a href="retirement-planning.html" class="service-card-link">
                     <div class="service-card" data-tilt>
                         <div class="service-background"></div>
-                        <div class="service-icon">
-                            <svg viewBox="0 0 64 64" fill="none">
-                                <circle cx="32" cy="32" r="28" fill="url(#iconGradient1)" />
-                                <path d="M24 32h16M32 24v16" stroke="white" stroke-width="3" stroke-linecap="round" />
-                            </svg>
+                        <div class="service-image">
+                            <img src="https://images.unsplash.com/photo-1559526324-4b87b5e36e44?ixlib=rb-4.0.3&auto=format&fit=crop&w=400&q=80" 
+                                 alt="Retirement planning consultation with financial charts and documents" 
+                                 class="service-img"
+                                 loading="lazy"
+                                 width="400" 
+                                 height="250">
+                            <div class="service-overlay">
+                                <div class="service-icon">
+                                    <svg viewBox="0 0 64 64" fill="none">
+                                        <circle cx="32" cy="32" r="28" fill="url(#iconGradient1)" />
+                                        <path d="M24 32h16M32 24v16" stroke="white" stroke-width="3" stroke-linecap="round" />
+                                    </svg>
+                                </div>
+                            </div>
                         </div>
                         <h3>Retirement Planning</h3>
                         <p>Build a secure retirement with strategic planning and investment guidance tailored to your
@@ -289,12 +315,21 @@
                 <a href="investment-management.html" class="service-card-link">
                     <div class="service-card" data-tilt>
                         <div class="service-background"></div>
-                        <div class="service-icon">
-                            <svg viewBox="0 0 64 64" fill="none">
-                                <circle cx="32" cy="32" r="28" fill="url(#iconGradient2)" />
-                                <path d="M20 44L32 20L44 44M26 38h12" stroke="white" stroke-width="3"
-                                    stroke-linecap="round" />
-                            </svg>
+                        <div class="service-image">
+                            <img src="https://images.unsplash.com/photo-1611974789855-9c2a0a7236a3?ixlib=rb-4.0.3&auto=format&fit=crop&w=400&q=80" 
+                                 alt="Investment portfolio analysis with growth charts and financial data" 
+                                 class="service-img"
+                                 loading="lazy"
+                                 width="400" 
+                                 height="250">
+                            <div class="service-overlay">
+                                <div class="service-icon">
+                                    <svg viewBox="0 0 64 64" fill="none">
+                                        <circle cx="32" cy="32" r="28" fill="url(#iconGradient2)" />
+                                        <path d="M20 44L32 20L44 44M26 38h12" stroke="white" stroke-width="3" stroke-linecap="round" />
+                                    </svg>
+                                </div>
+                            </div>
                         </div>
                         <h3>Investment Management</h3>
                         <p>Professional portfolio management and investment strategies to grow your wealth while
@@ -305,12 +340,21 @@
                 <a href="estate-planning.html" class="service-card-link">
                     <div class="service-card" data-tilt>
                         <div class="service-background"></div>
-                        <div class="service-icon">
-                            <svg viewBox="0 0 64 64" fill="none">
-                                <circle cx="32" cy="32" r="28" fill="url(#iconGradient3)" />
-                                <path d="M20 42V22L32 16L44 22V42L32 48L20 42Z" stroke="white" stroke-width="3"
-                                    stroke-linejoin="round" />
-                            </svg>
+                        <div class="service-image">
+                            <img src="https://images.unsplash.com/photo-1450101499163-c8848c66ca85?ixlib=rb-4.0.3&auto=format&fit=crop&w=400&q=80" 
+                                 alt="Estate planning documents and legal consultation for wealth transfer" 
+                                 class="service-img"
+                                 loading="lazy"
+                                 width="400" 
+                                 height="250">
+                            <div class="service-overlay">
+                                <div class="service-icon">
+                                    <svg viewBox="0 0 64 64" fill="none">
+                                        <circle cx="32" cy="32" r="28" fill="url(#iconGradient3)" />
+                                        <path d="M20 42V22L32 16L44 22V42L32 48L20 42Z" stroke="white" stroke-width="3" stroke-linejoin="round" />
+                                    </svg>
+                                </div>
+                            </div>
                         </div>
                         <h3>Estate Planning</h3>
                         <p>Protect your legacy with comprehensive estate planning strategies and wealth transfer
@@ -321,14 +365,22 @@
                 <a href="insurance-planning.html" class="service-card-link">
                     <div class="service-card" data-tilt>
                         <div class="service-background"></div>
-                        <div class="service-icon">
-                            <svg viewBox="0 0 64 64" fill="none">
-                                <circle cx="32" cy="32" r="28" fill="url(#iconGradient4)" />
-                                <path
-                                    d="M32 20C38 20 42 24 42 30C42 36 38 40 32 40C26 40 22 36 22 30C22 24 26 20 32 20Z"
-                                    stroke="white" stroke-width="3" />
-                                <path d="M32 44V48M28 48H36" stroke="white" stroke-width="3" stroke-linecap="round" />
-                            </svg>
+                        <div class="service-image">
+                            <img src="https://images.unsplash.com/photo-1551836022-deb4988cc6c0?ixlib=rb-4.0.3&auto=format&fit=crop&w=400&q=80" 
+                                 alt="Insurance protection planning with family security and coverage analysis" 
+                                 class="service-img"
+                                 loading="lazy"
+                                 width="400" 
+                                 height="250">
+                            <div class="service-overlay">
+                                <div class="service-icon">
+                                    <svg viewBox="0 0 64 64" fill="none">
+                                        <circle cx="32" cy="32" r="28" fill="url(#iconGradient4)" />
+                                        <path d="M32 20C38 20 42 24 42 30C42 36 38 40 32 40C26 40 22 36 22 30C22 24 26 20 32 20Z" stroke="white" stroke-width="3" />
+                                        <path d="M32 44V48M28 48H36" stroke="white" stroke-width="3" stroke-linecap="round" />
+                                    </svg>
+                                </div>
+                            </div>
                         </div>
                         <h3>Insurance Planning</h3>
                         <p>Comprehensive insurance analysis to protect your family and assets from unexpected events.
@@ -339,13 +391,22 @@
                 <a href="education-funding.html" class="service-card-link">
                     <div class="service-card" data-tilt>
                         <div class="service-background"></div>
-                        <div class="service-icon">
-                            <svg viewBox="0 0 64 64" fill="none">
-                                <circle cx="32" cy="32" r="28" fill="url(#iconGradient5)" />
-                                <path d="M24 20H40V44H24V20Z" stroke="white" stroke-width="3" stroke-linejoin="round" />
-                                <path d="M28 28H36M28 32H36M28 36H32" stroke="white" stroke-width="2"
-                                    stroke-linecap="round" />
-                            </svg>
+                        <div class="service-image">
+                            <img src="https://images.unsplash.com/photo-1427504494785-3a9ca7044f45?ixlib=rb-4.0.3&auto=format&fit=crop&w=400&q=80" 
+                                 alt="Education funding planning with college savings and 529 plan strategies" 
+                                 class="service-img"
+                                 loading="lazy"
+                                 width="400" 
+                                 height="250">
+                            <div class="service-overlay">
+                                <div class="service-icon">
+                                    <svg viewBox="0 0 64 64" fill="none">
+                                        <circle cx="32" cy="32" r="28" fill="url(#iconGradient5)" />
+                                        <path d="M24 20H40V44H24V20Z" stroke="white" stroke-width="3" stroke-linejoin="round" />
+                                        <path d="M28 28H36M28 32H36M28 36H32" stroke="white" stroke-width="2" stroke-linecap="round" />
+                                    </svg>
+                                </div>
+                            </div>
                         </div>
                         <h3>Education Funding</h3>
                         <p>Strategic planning for education expenses with tax-advantaged savings and investment options.
@@ -356,12 +417,22 @@
                 <a href="business-planning.html" class="service-card-link">
                     <div class="service-card" data-tilt>
                         <div class="service-background"></div>
-                        <div class="service-icon">
-                            <svg viewBox="0 0 64 64" fill="none">
-                                <circle cx="32" cy="32" r="28" fill="url(#iconGradient6)" />
-                                <path d="M20 24H44V40H20V24Z" stroke="white" stroke-width="3" stroke-linejoin="round" />
-                                <path d="M28 30H36M24 34H40" stroke="white" stroke-width="2" stroke-linecap="round" />
-                            </svg>
+                        <div class="service-image">
+                            <img src="https://images.unsplash.com/photo-1507003211169-0a1dd7228f2d?ixlib=rb-4.0.3&auto=format&fit=crop&w=400&q=80" 
+                                 alt="Business planning consultation with financial strategies and succession planning" 
+                                 class="service-img"
+                                 loading="lazy"
+                                 width="400" 
+                                 height="250">
+                            <div class="service-overlay">
+                                <div class="service-icon">
+                                    <svg viewBox="0 0 64 64" fill="none">
+                                        <circle cx="32" cy="32" r="28" fill="url(#iconGradient6)" />
+                                        <path d="M20 24H44V40H20V24Z" stroke="white" stroke-width="3" stroke-linejoin="round" />
+                                        <path d="M28 30H36M24 34H40" stroke="white" stroke-width="2" stroke-linecap="round" />
+                                    </svg>
+                                </div>
+                            </div>
                         </div>
                         <h3>Business Planning</h3>
                         <p>Financial strategies for business owners including succession planning and employee benefits.
@@ -491,6 +562,22 @@
                 </div>
 
                 <div class="about-visual">
+                    <!-- Professional Office Image -->
+                    <div class="about-image-container">
+                        <img src="https://images.unsplash.com/photo-1497366216548-37526070297c?ixlib=rb-4.0.3&auto=format&fit=crop&w=600&q=80" 
+                             alt="Modern financial planning office with professional consultation setup" 
+                             class="about-image"
+                             loading="lazy"
+                             width="600" 
+                             height="400">
+                        <div class="about-image-overlay">
+                            <div class="experience-badge">
+                                <span class="experience-number">15+</span>
+                                <span class="experience-text">Years Experience</span>
+                            </div>
+                        </div>
+                    </div>
+                    
                     <div class="stats-dashboard">
                         <div class="dashboard-header">
                             <h4>Our Track Record</h4>
@@ -567,7 +654,12 @@
                     </div>
                     <div class="testimonial-author">
                         <div class="author-avatar">
-                            <div class="avatar-placeholder">SM</div>
+                            <img src="https://images.unsplash.com/photo-1494790108755-2616b612b786?ixlib=rb-4.0.3&auto=format&fit=crop&w=150&q=80" 
+                                 alt="Sarah Mitchell - satisfied financial planning client" 
+                                 class="avatar-img"
+                                 loading="lazy"
+                                 width="60" 
+                                 height="60">
                         </div>
                         <div class="author-info">
                             <h4>Sarah & Michael Johnson</h4>
@@ -587,7 +679,12 @@
                     </div>
                     <div class="testimonial-author">
                         <div class="author-avatar">
-                            <div class="avatar-placeholder">DR</div>
+                            <img src="https://images.unsplash.com/photo-1472099645785-5658abf4ff4e?ixlib=rb-4.0.3&auto=format&fit=crop&w=150&q=80" 
+                                 alt="David Rodriguez - business owner and financial planning client" 
+                                 class="avatar-img"
+                                 loading="lazy"
+                                 width="60" 
+                                 height="60">
                         </div>
                         <div class="author-info">
                             <h4>David Rodriguez</h4>
@@ -607,7 +704,12 @@
                     </div>
                     <div class="testimonial-author">
                         <div class="author-avatar">
-                            <div class="avatar-placeholder">LC</div>
+                            <img src="https://images.unsplash.com/photo-1438761681033-6461ffad8d80?ixlib=rb-4.0.3&auto=format&fit=crop&w=150&q=80" 
+                                 alt="Lisa Chen - family financial planning client" 
+                                 class="avatar-img"
+                                 loading="lazy"
+                                 width="60" 
+                                 height="60">
                         </div>
                         <div class="author-info">
                             <h4>Lisa Chen</h4>
@@ -801,9 +903,26 @@
         <div class="container">
             <div class="footer-content">
                 <div class="footer-section">
-                    <h3>[Your Business Name]</h3>
+                    <div class="footer-logo">
+                        <div class="footer-brand-logo">
+                            <svg viewBox="0 0 64 64" class="footer-logo-svg">
+                                <defs>
+                                    <linearGradient id="footerLogoGradient" x1="0%" y1="0%" x2="100%" y2="100%">
+                                        <stop offset="0%" style="stop-color:#3b82f6"/>
+                                        <stop offset="50%" style="stop-color:#8b5cf6"/>
+                                        <stop offset="100%" style="stop-color:#06b6d4"/>
+                                    </linearGradient>
+                                </defs>
+                                <circle cx="32" cy="32" r="30" fill="url(#footerLogoGradient)"/>
+                                <path d="M16 20 L16 44 L20 44 L20 28 L26 44 L30 44 L30 20 L26 20 L26 36 L20 20 Z" fill="white"/>
+                                <text x="32" y="38" text-anchor="middle" fill="white" font-size="16" font-weight="bold">&amp;</text>
+                                <path d="M34 20 L34 44 L38 44 L38 28 L44 44 L48 44 L48 20 L44 20 L44 36 L38 20 Z" fill="white"/>
+                            </svg>
+                        </div>
+                        <h3>Nolan & Nolan Financial Planning</h3>
+                    </div>
                     <p>Professional financial planning services helping you achieve your financial goals with
-                        confidence.</p>
+                        confidence and strategic wealth management expertise.</p>
                 </div>
                 <div class="footer-section">
                     <h4>Services</h4>
